--- a/popup.html
+++ b/popup.html
@@ -1,11 +1,11 @@
 <html>
     <head>
-        <title>Email tone check</title>
+        <title>Better My Email</title>
         <script src="popup.js"></script>
         <img src="popup.png" width="400" height="400">
     </head>
     <body>
-        <h1>Email Tone check</h1>
-        <p>Please always check the tone of your email. You may hurt someone. Like Me</p>
+        <h1>Better My Email</h1>
+        <p>Please always analyze your email to make it better. You may hurt someone. Like Me</p>
     </body>
 </html>
