Feedback Feature. Not Working yet

--- a/popup.html
+++ b/popup.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>Better My Email</title>
-        <script src="popup.js"></script>
+        <script type="module" src="popup.js"></script>
         <img src="popup.png" width="400" height="400">
     </head>
     <body>
