Manifest plus Icon Change

--- a/popup.html
+++ b/popup.html
@@ -6,6 +6,8 @@
     </head>
     <body>
         <h1>Better My Email</h1>
-        <p>Please always analyze your email to make it better. You may hurt someone. Like Me</p>
+        <p>Write your emails like a Pro. 
+             <br>Better My Email will Polish your email in just a click.
+        </p>
     </body>
 </html>
